# detection-as-code-aws

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
detectc/: __init__.py  cli.py  models.py  parser.py
detectc/compiler/: athena.py  cloudwatch.py  core.py  securityhub.py
detectc/compiler/templates/athena/: query.j2
detectc/compiler/templates/cloudwatch/: insights.j2
detectc/compiler/templates/securityhub/: insight.j2
detections/: s3_access_anomaly.yaml
docs/: ARCHITECTURE.md  ROADMAP.md  USAGE.md
examples/: s3_access_anomaly.athena.sql  s3_access_anomaly.cloudwatch.insights  s3_access_anomaly.securityhub.json
tests/: test_parser_and_compilers.py
